# reducto

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  cli.py  graph.py  mcp_server.py  parser.py  publish.sh  pyproject.toml  visualize.py
.github/workflows/: publish.yml
docs/specs/: reducto_v2_spec.md
reducto/: __init__.py  __main__.py  cli.py  context.py  export.py  graph.py  ingest.py  install.py  models.py  query.py  serve.py  skill.py  visualize_cmd.py
reducto/cache/: __init__.py  schrodinger.py  store.py
reducto/engine/: __init__.py  ast_parser.py  markdown_parser.py  orchestrator.py  regex_parser.py
reducto/graph/: __init__.py  communities.py  core.py
reducto/protocol/: __init__.py  mcp_server.py  tools.py
reducto/skills/: blueprint.py  loader.py
tests/: test_hot_reload.py  test_skill.py  test_timeout.py
